--- a/folder-file-creator/package.json
+++ b/folder-file-creator/package.json
@@ -18,7 +18,5 @@
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   },
-  "dependencies": {
-    "bootstrap": "^5.2.3"
-  }
+  "dependencies": {}
 }
